<resources>
    <string name="app_name">Piano Tracker</string>
    <string name="img_description">image</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="rank">Rank</string>
    <string name="sector">Sector</string>
    <string name="target">Target</string>
    <string name="users">Users</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ranking">Ranking</string>
    <string name="hospitals">Hospitals</string>
    <string name="reps">Reps</string>
    <string name="hc_sectors">HC Sectors</string>
    <string name="period">Period</string>
    <string name="filter">Filter</string>
    <string name="doctors">Doctors</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="progress">Progress</string>
    <string name="country_and_product">Country and Product</string>
    <string name="country">Country</string>
    <string name="product">Product</string>
    <string name="done">Done</string>
    <string name="reps_filter">Reps Filter</string>
    <string name="hospitals_filter">Hospitals Filter</string>
    <string name="filters">Filters</string>
    <string name="doctors_filter">Doctors Filter</string>
    <string name="products">Products</string>
    <string name="cities">Cities</string>
    <string name="requests">Requests</string>
    <string name="drop">Drop</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="add_patient">Add Patient</string>
    <string name="mg">mg</string>
    <string name="total">Total</string>
    <string name="marketshare">MarketShare</string>
    <string name="doses">Doses</string>
    <string name="monthly_target">Monthly Target</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="years">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>
    <string-array name="piqray_lines">
        <item>Select Line</item>
        <item>1st line</item>
        <item>2nd line</item>
        <item>3rd line</item>
        <item>4th line</item>
    </string-array>
    <string-array name="piqray_doses">
        <item>Select Dose</item>
        <item>300</item>
        <item>250</item>
        <item>200</item>
    </string-array>
    <string-array name="afintor_lines">
        <item>Select Line</item>
        <item>1st line</item>
        <item>2nd line</item>
        <item>3rd line</item>
        <item>4th line</item>
    </string-array>
    <string-array name="afintor_doses">
        <item>Select Dose</item>
        <item>10</item>
        <item>5</item>
    </string-array>
    <string-array name="palbociclib_pos_pre">
        <item>Select PRE or POST</item>
        <item>PRE</item>
        <item>POST</item>
    </string-array>
    <string-array name="palbociclib_medical_surgical">
        <item>Select Medical or Surgical</item>
        <item>Medical</item>
        <item>Surgical</item>
    </string-array>
    <string-array name="palbociclib_line">
        <item>Select line</item>
        <item>1st Line</item>
        <item>2nd line</item>
        <item>3rd line</item>
    </string-array>
    <string-array name="palbociclib_ai_ful">
        <item>Select Ai or Ful</item>
        <item>Ai</item>
        <item>Ful</item>
    </string-array>
    <string-array name="kisqali_pos_pre">
        <item>Select PRE or POST</item>
        <item>PRE</item>
        <item>POST</item>
    </string-array>
    <string-array name="kisqali_medical_surgical">
        <item>Select Medical or Surgical</item>
        <item>Medical</item>
        <item>Surgical</item>
    </string-array>
    <string-array name="kisqali_line">
        <item>Select line</item>
        <item>1st Line</item>
        <item>2nd line</item>
        <item>3rd line</item>
    </string-array>
    <string-array name="kisqali_ai_ful">
        <item>Select Ai or Ful</item>
        <item>Ai</item>
        <item>Ful</item>
    </string-array>
    <string-array name="kisqali_dose">
        <item>Select Dose</item>
        <item>600</item>
        <item>400</item>
        <item>200</item>
    </string-array>
    <string-array name="abemaciclib_pos_pre">
        <item>Select PRE or POST or Brain Mets</item>
        <item>PRE</item>
        <item>POST</item>
        <item>Brain Mets</item>
    </string-array>
    <string-array name="abemaciclib_medical_surgical">
        <item>Select Medical or Surgical</item>
        <item>Medical</item>
        <item>Surgical</item>
    </string-array>
    <string-array name="abemaciclib_line">
        <item>Select line</item>
        <item>1st Line</item>
        <item>2nd line</item>
        <item>3rd line</item>
    </string-array>
    <string-array name="abemaciclib_mono_combo">
        <item>Select mono or combo</item>
        <item>Mono</item>
        <item>Combo</item>
    </string-array>
    <string-array name="abemaciclib_ai_ful">
        <item>Select Ai or Ful</item>
        <item>Ai</item>
        <item>Ful</item>
    </string-array>
    <string-array name="tasigna_lines">
        <item>Select Line</item>
        <item>1st line</item>
        <item>2nd line</item>
        <item>3rd line</item>
    </string-array>
    <string-array name="tasigna_managment">
        <item>Current Management</item>
        <item>Glivec</item>
        <item>Imatinib Gx</item>
        <item>Dasatinib Gx</item>
        <item>Sprycel</item>
        <item>Tasigna</item>
        <item>Bosulif</item>
    </string-array>
    <string-array name="tasigna_doses">
        <item>Select Dose</item>
        <item>150</item>
        <item>200</item>
    </string-array>
    <string-array name="revolade_itp_saa">
        <item>Select ITP or SAA</item>
        <item>ITP</item>
        <item>SAA</item>
    </string-array>
    <string-array name="revolade_itp_adult_ped">
        <item>Select Adult/Ped</item>
        <item>Adult</item>
        <item>Pediatric</item>
    </string-array>
    <string-array name="revolade_itp_lines">
        <item>Select Line</item>
        <item>1st line</item>
        <item>2nd line</item>
        <item>3rd line</item>
    </string-array>
    <string-array name="revolade_saa_lines">
        <item>Select Line</item>
        <item>1st line</item>
        <item>2nd line</item>
    </string-array>
    <string-array name="revolade_itp_managemnt_1st">
        <item>Select Management</item>
        <item>Newly Diagnosed</item>
        <item>Steroid</item>
        <item>IVIG</item>
    </string-array>
    <string-array name="revolade_itp_managemnt_2nd_3rd">
        <item>Select Management</item>
        <item>Nplate</item>
        <item>Avatrombopag</item>
        <item>Revolade</item>
        <item>Rituximab</item>
        <item>Splenoctomy</item>
        <item>Fostamatinib</item>
    </string-array>
    <string-array name="revolade_saa_managemnt_1st_2nd">
        <item>Select Management</item>
        <item>HSCT</item>
        <item>IST</item>
        <item>IST + Revolade</item>
    </string-array>
    <string-array name="revolade_dose">
        <item>Select Dose</item>
        <item>PFOS 12.5</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>150</item>
    </string-array>
    <string-array name="jakavi_mpn_gvhd">
        <item>Select MPN or GVHD</item>
        <item>MPN</item>
        <item>GVHD</item>
    </string-array>
    <string-array name="jakavi_mf_pv">
        <item>Select MF/PV</item>
        <item>MF</item>
        <item>PV</item>
    </string-array>
    <string-array name="jakavi_acute_chronic">
        <item>Select Acute/Chronic</item>
        <item>Acute</item>
        <item>Chronic</item>
    </string-array>
    <string-array name="jakavi_pv_lines">
        <item>Select Line</item>
        <item>1st line</item>
        <item>2nd line</item>
        <item>3rd line</item>
    </string-array>
    <string-array name="jakavi_mf_lines">
        <item>Select Line</item>
        <item>Low risk</item>
        <item>Int1</item>
        <item>Int2</item>
        <item>High Risk</item>
    </string-array>
    <string-array name="jakavi_mf_managemnt">
        <item>Select Management</item>
        <item>Newly Diagnosed</item>
        <item>Wait &amp; Watch</item>
        <item>HU</item>
        <item>Other</item>
        <item>Jakavi</item>
    </string-array>
    <string-array name="jakavi_pv_managemnt">
        <item>Select Management</item>
        <item>Wait &amp; Watch</item>
        <item>HU</item>
        <item>IFN</item>
        <item>Other</item>
        <item>Jakavi</item>
    </string-array>
    <string-array name="jakavi_acute_chronic_managemnt">
        <item>Select Management</item>
        <item>Steroid</item>
        <item>Jakavi</item>
    </string-array>
    <string-array name="jakavi_dose">
        <item>Select Dose</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string-array name="adakveo_voc">
        <item>Select VOC</item>
        <item>0</item>
        <item>1–3</item>
        <item>3–4</item>
        <item>5–10</item>
        <item>+10</item>
    </string-array>
    <string-array name="adakveo_comorbidities">
        <item>Neurological Complications</item>
        <item>Hepatobiliary Complications</item>
        <item>Renal Complications</item>
        <item>Pulmounary Hypertension</item>
        <item>Priapism</item>
        <item>ACS</item>
        <item>Spleen Complications</item>
        <item>Retinopathy</item>
        <item>AVN</item>
        <item>Others</item>
    </string-array>
    <string-array name="adakveo_management">
        <item>Analgesics</item>
        <item>HU</item>
        <item>Opioid</item>
        <item>Folic acid</item>
        <item>Blood transfusion</item>
        <item>HO BMT</item>
        <item>Others</item>
        <item>L-glutamine</item>
        <item>Voxelotor</item>
        <item>adakveo</item>
    </string-array>
    <string-array name="adakveo_status">
        <item>Adakveo Status</item>
        <item>Initiated</item>
        <item>In progress</item>
        <item>Completed</item>
    </string-array>
    <string-array name="dpo_status">
        <item>DPO Status</item>
        <item>Initiated</item>
        <item>In progress</item>
        <item>Completed</item>
    </string-array>
    <string-array name="empty_arr"></string-array>
</resources>