<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/navigation_rank"
        android:icon="@drawable/ic_rank"
        android:title="@string/rank" />


    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_target"
        android:title="@string/progress" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_users"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_requests"
        android:icon="@drawable/ic_heart"
        android:title="@string/requests" />
</menu>