<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".rep.ranking.RepRankingFragment"
    android:orientation="vertical"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/novartis_logo"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:gravity="center"
                android:text="@string/ranking"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/selectCountry"
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/img_description"
                android:src="@drawable/ic_location" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/novartis_logo"
                android:background="@color/light_gray"
                android:visibility="gone"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/ranking_reps_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/reps"
                android:textColor="@color/light_gray"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/ranking_sectors_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:gravity="center"
                android:text="@string/hc_sectors"
                android:textColor="@color/light_gray"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/ranking_hospitals_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:gravity="center"
                android:text="@string/hospitals"
                android:textColor="@color/light_gray"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/ranking_doctors_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="center"
                android:text="@string/doctors"
                android:textColor="@color/light_gray"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/filter_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:padding="15dp"
                    android:text="@string/period"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:drawableLeftCompat="@drawable/ic_period"
                    app:drawableTint="@color/black" />

            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_gray"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/filters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:padding="15dp"
                    android:text="@string/filters"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:drawableLeftCompat="@drawable/ic_filter"
                    app:drawableTint="@color/black" />

            </RelativeLayout>



        </LinearLayout>





    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ranking_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:listitem="@layout/item_ranking_hc_sectors" />


</LinearLayout>