<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/country_and_product"
        android:textColor="@color/black"
        android:textSize="20sp"/>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textColor="@color/light_blue"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>
    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        android:entries="@array/months"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textColor="@color/light_blue"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"/>

    <Spinner
        android:id="@+id/product_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        android:entries="@array/years"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <TextView
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>


</LinearLayout>
